<resources>
    <string name="app_name">GroceryStore</string>

    <string name="price_text">Price :</string>
    <string name="name_text">Name :</string>
    <string name="quantity_text">Quantity :</string>
    <string name="supplier_name_text">Supplier Name :</string>
    <string name="supplier_phone_text">Supplier Phone :</string>
    <string name="cost_text">Cost :</string>
    <string name="insert_product">Insert Product</string>
    <string name="action_delete_table">Delete Table</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="error_message">Enter value at %s</string>
    <string name="title_add_product">Add New Product</string>
    <string name="title_edit_product">Edit Product Details</string>
    <string name="empty_text">No Product in the Table. \n\nYou can enter product by pressing Add button below.
        \n\nKindly note, Product name, price, Supplier name and phone number are necessary field. Default quantity is 0.</string>
    <string name="dialog_title_save">Save Product</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_edit">Edit</string>
    <string name="dialog_title_delete">You want to delete this product</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>
    <string name="product_inserted">New Product Added</string>
    <string name="product_insert_failed">Unable to add new Product</string>
    <string name="product_update_fail">Unable to update selected Product details</string>
    <string name="product_updated">Product details updated</string>
    <string name="product_delete_fail">Unable to delete selected Product</string>
    <string name="product_deleted">Selected Product deleted</string>
    <string name="no_data">No Product details to save</string>
    <string name="no_change">No change in Product details</string>
    <string name="dialog_title_discard">To save changes, press Edit. Otherwise press Discard</string>
    <string name="dialog_button_discard">Discard</string>
    <string name="no_stock">No stock to sell</string>
    <string name="button_sale">Sale</string>
    <string name="list_view_price">Price : %d</string>
    <string name="list_view_qty">Quantity : %d</string>
</resources>
