<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/product_details_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/name_text"
                style="@style/text_view_style"/>
            <EditText
                android:id="@+id/edit_text_name"
                style="@style/edit_text_style"
                android:inputType="textCapWords"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/price_text"
                style="@style/text_view_style"/>
            <EditText
                android:id="@+id/edit_text_price"
                style="@style/edit_text_style"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/quantity_text"
                style="@style/text_view_style"/>
            <EditText
                android:id="@+id/edit_text_qty"
                style="@style/edit_text_style"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/supplier_name_text"
                style="@style/text_view_style"/>
            <EditText
                android:id="@+id/edit_text_sup_name"
                style="@style/edit_text_style"
                android:inputType="textCapWords"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/supplier_phone_text"
                style="@style/text_view_style"/>
            <EditText
                android:id="@+id/edit_text_sup_ph"
                style="@style/edit_text_style"
                android:inputType="phone"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/cost_text"
                style="@style/text_view_style"/>
            <EditText
                android:id="@+id/edit_text_cost"
                style="@style/edit_text_style"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <Button
            android:id="@+id/insert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_product"/>
    </LinearLayout>
</ScrollView>