<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/name_text"
                    style="@style/text_view_style"/>
                <EditText
                    android:id="@+id/edit_text_name"
                    style="@style/edit_text_style"
                    android:inputType="textCapWords"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/price_text"
                    style="@style/text_view_style"/>
                <EditText
                    android:id="@+id/edit_text_price"
                    style="@style/edit_text_style"
                    android:inputType="numberDecimal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/quantity_text"
                    style="@style/text_view_style"/>
                <LinearLayout
                    style="@style/edit_text_style"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/decrease_qty"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="-" />
                    <EditText
                        android:id="@+id/edit_text_qty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:inputType="number"/>
                    <Button
                        android:id="@+id/increase_qty"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="+"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/supplier_name_text"
                    style="@style/text_view_style"/>
                <EditText
                    android:id="@+id/edit_text_sup_name"
                    style="@style/edit_text_style"
                    android:inputType="textCapWords"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/supplier_phone_text"
                    style="@style/text_view_style"/>
                <EditText
                    android:id="@+id/edit_text_sup_ph"
                    style="@style/edit_text_style"
                    android:inputType="phone"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/call_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/baseline_call_black_48"
        android:layout_margin="8dp" />
</RelativeLayout>